# gql-data-driven

./: .env  .gitignore  .graphqlrc  README.md  docker-compose.yml  initial.sql
apollo-fe/: Dockerfile  package-lock.json  package.json
apollo-fe/src/: App.js  AuthorTable.js  BookTable.js  index.js
apollo-fe/src/components/: Layout.js
relay-fe/: Dockerfile  package-lock.json  package.json  relay.config.js  schema.graphql
relay-fe/src/: App.js  AuthorTable.js  BookTable.js  RelayEnvironment.js
relay-fe/src/components/: ButtonModal.js  Table.js
rust-be/: Cargo.toml  Dockerfile
rust-be/src/: db.rs  handlers.rs  main.rs
rust-be/src/schemas/: author.rs  book.rs  mod.rs  root.rs
