[package]
name = "rust-be"
version = "0.1.0"
authors = ["vicp5 <vdiaz@noodle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
env_logger = "0.7.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"
mysql = "17"
r2d2 = "0.8"
r2d2_mysql = "17.0"
dotenv = "0.15"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }